--- a/styles/images.css
+++ b/styles/images.css
@@ -15,3 +15,30 @@
     height: 100%;
     object-fit: cover;
 }
+
+.img-cont-fixed {
+    width: 100%;
+    height: 0;
+    box-sizing: content-box;
+    position: relative;
+}
+
+.img-cont-fixed img {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.ratio-1-1 {
+    padding-top: 100%;
+}
+
+.ratio-16-9 {
+    padding-top: 56.25%;
+}
+
+.ratio-4-3 {
+    padding-top: 75%;
+}
