--- a/styles/layout.css
+++ b/styles/layout.css
@@ -97,9 +97,45 @@ body {
     grid-column: span 5;
 }
 
+.sm-hide {
+    display: none;
+}
+
+.sm-show {
+    display: block;
+}
+
+.sm-show-flex {
+    display: flex;
+}
+
+.sm-show-grid {
+    display: grid;
+}
+
+.sm-moveto-2 {
+    grid-column: 2;
+}
+
+.sm-moveto-3 {
+    grid-column: 3;
+}
+
+.sm-moveto-4 {
+    grid-column: 4;
+}
+
+.sm-moveto-5 {
+    grid-column: 5;
+}
+
+.sm-moveto-6 {
+    grid-column: 6;
+}
+
 /* MEDIUM SCREENS */
 
-@media all and (min-width: 540px) {
+@media all and (min-width: 768px) {
     .md-2 {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -129,6 +165,33 @@ body {
     }
     .md-span-5 {
         grid-column: span 5;
+    }
+    .md-hide {
+        display: none;
+    }
+    .md-show {
+        display: block;
+    }
+    .md-show-flex {
+        display: flex;
+    }
+    .md-show-grid {
+        display: grid;
+    }
+    .md-moveto-2 {
+        grid-column: 2;
+    }
+    .md-moveto-3 {
+        grid-column: 3;
+    }
+    .md-moveto-4 {
+        grid-column: 4;
+    }
+    .md-moveto-5 {
+        grid-column: 5;
+    }
+    .md-moveto-6 {
+        grid-column: 6;
     }
 }
 
@@ -165,6 +228,33 @@ body {
     .lg-span-5 {
         grid-column: span 5;
     }
+    .lg-hide {
+        display: none;
+    }
+    .lg-show {
+        display: block;
+    }
+    .lg-show-flex {
+        display: flex;
+    }
+    .lg-show-grid {
+        display: grid;
+    }
+    .lg-moveto-2 {
+        grid-column: 2;
+    }
+    .lg-moveto-3 {
+        grid-column: 3;
+    }
+    .lg-moveto-4 {
+        grid-column: 4;
+    }
+    .lg-moveto-5 {
+        grid-column: 5;
+    }
+    .lg-moveto-6 {
+        grid-column: 6;
+    }
 }
 
 /* XL SCREENS */
@@ -199,6 +289,33 @@ body {
     }
     .xl-span-5 {
         grid-column: span 5;
+    }
+    .xl-hide {
+        display: none;
+    }
+    .xl-show {
+        display: block;
+    }
+    .xl-show-flex {
+        display: flex;
+    }
+    .xl-show-grid {
+        display: grid;
+    }
+    .xl-moveto-2 {
+        grid-column: 2;
+    }
+    .xl-moveto-3 {
+        grid-column: 3;
+    }
+    .xl-moveto-4 {
+        grid-column: 4;
+    }
+    .xl-moveto-5 {
+        grid-column: 5;
+    }
+    .xl-moveto-6 {
+        grid-column: 6;
     }
 }
 
