--- a/styles/layout.css
+++ b/styles/layout.css
@@ -113,24 +113,22 @@ body {
     display: grid;
 }
 
-.sm-moveto-2 {
-    grid-column: 2;
-}
-
-.sm-moveto-3 {
-    grid-column: 3;
-}
-
-.sm-moveto-4 {
-    grid-column: 4;
-}
-
-.sm-moveto-5 {
-    grid-column: 5;
-}
-
-.sm-moveto-6 {
-    grid-column: 6;
+@media all and (max-width: 767px) {
+    .sm-moveto-2 {
+        grid-column: 2;
+    }
+    .sm-moveto-3 {
+        grid-column: 3;
+    }
+    .sm-moveto-4 {
+        grid-column: 4;
+    }
+    .sm-moveto-5 {
+        grid-column: 5;
+    }
+    .sm-moveto-6 {
+        grid-column: 6;
+    }
 }
 
 /* MEDIUM SCREENS */
@@ -178,6 +176,9 @@ body {
     .md-show-grid {
         display: grid;
     }
+}
+
+@media all and (min-width: 768px) and (max-width: 979px) {
     .md-moveto-2 {
         grid-column: 2;
     }
@@ -240,6 +241,9 @@ body {
     .lg-show-grid {
         display: grid;
     }
+}
+
+@media all and (min-width: 980px) and (max-width: 1439px) {
     .lg-moveto-2 {
         grid-column: 2;
     }
