--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,7 @@ html {
     font-size: 16px;
     font-family: sans-serif;
     /* COLORS */
-    --color-orange: #ff5400;
+    --color-orange: #bada55;
     --color-green: #4bb900;
     --color-blue: #008ae9;
     /**/
