--- a/css-readable/main.css
+++ b/css-readable/main.css
@@ -3,7 +3,7 @@ html {
   font-size: 16px;
   font-family: sans-serif;
   /* COLORS */
-  --color-orange: #bada55;
+  --color-orange: #ff5400;
   --color-green: #4bb900;
   --color-blue: #008ae9;
   /**/
