--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,8 +1,6 @@
 html {
-    font-size: 16px;
-    font-family: sans-serif;
     /* COLORS */
-    --color-orange: #bada55;
+    --color-orange: #FF5400;
     --color-green: #4bb900;
     --color-blue: #008ae9;
     /**/
