--- a/css-readable/main.css
+++ b/css-readable/main.css
@@ -1,11 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i');
 html {
   /* COLORS */
-<<<<<<< HEAD
   --color-orange: #FF5400;
-=======
-  --color-orange: #ff5400;
->>>>>>> c8ddcebfaf52016f797b2222a8128b34539b23c4
   --color-green: #4bb900;
   --color-blue: #008ae9;
   /**/
@@ -21,6 +17,15 @@ html {
   --color-dark-gray-10: rgba(97, 106, 116, .1);
   /**/
   --color-light-gray: #e0e4e8;
+  --light-gray-90: rgba(224, 228, 232, .9);
+  --light-gray-80: rgba(224, 228, 232, .8);
+  --light-gray-70: rgba(224, 228, 232, .7);
+  --light-gray-60: rgba(224, 228, 232, .6);
+  --light-gray-50: rgba(224, 228, 232, .5);
+  --light-gray-40: rgba(224, 228, 232, .4);
+  --light-gray-30: rgba(224, 228, 232, .3);
+  --light-gray-20: rgba(224, 228, 232, .2);
+  --light-gray-10: rgba(224, 228, 232, .1);
   /**/
   --color-dark: rgba(19, 22, 25, 1);
   --color-dark-90: rgba(19, 22, 25, .9);
@@ -969,13 +974,16 @@ footer ul {
 footer h3 {
   color: var(--color-light);
   font-size: 1.2rem;
+  font-weight: 500;
 }
 
 footer a {
   text-decoration: none;
-  margin-bottom: .5rem;
+  margin-bottom: .2rem;
   display: block;
-  color: var(--color-light-gray);
+  color: var(--light-gray-50);
+  background: none;
+  font-weight: 300;
 }
 
 .footer-logo {
@@ -1092,4 +1100,10 @@ tagline {
   display: flex;
   justify-content: center;
   flex-direction: column;
+}
+
+/* Pagination */
+
+.pagination {
+  text-align: center;
 }
