--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,32 +1,29 @@
 .button {
   box-shadow: inset 0 0 0 2px #ff3400;
-  color:#ff3400;
-}
+  color: #ff3400; }
+
 .button-gray {
   box-shadow: inset 0 0 0 2px #616a74;
-  color:#616a74;
-}
+  color: #616a74; }
 
 .button-solid {
   color: #fff;
   background-image: linear-gradient(to right, #ff3400 0%, #FF5400 100%);
   -webkit-backface-visibility: hidden;
-  z-index: 1;
-}
+  z-index: 1; }
 
 .button, .button-gray, .button-solid {
-display: inline-block;
-font-weight: 700;
-font-family: inherit;
--webkit-font-smoothing: subpixel-antialiased;
--webkit-font-smoothing: antialiased;
-padding: 1rem 2rem .955rem;
-border-radius: 3rem;
-text-decoration: none;
-position: relative;
-overflow: hidden;
-transition: ease-in all .1s;
-}
+  display: inline-block;
+  font-weight: 700;
+  font-family: inherit;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-font-smoothing: antialiased;
+  padding: 1rem 2rem .955rem;
+  border-radius: 3rem;
+  text-decoration: none;
+  position: relative;
+  overflow: hidden;
+  transition: ease-in all .1s; }
 
 .button:before, .button-gray:before {
   content: "";
@@ -37,30 +34,26 @@ transition: ease-in all .1s;
   height: 100%;
   opacity: 0;
   z-index: -1;
-  transition: .1s ease-in opacity;
-  }
+  transition: .1s ease-in opacity; }
 
 .button:before {
-  background-image: linear-gradient(to right, #ff3400 0%, #ff7b00 100%);
-}
-.button-gray:before {
-  background-image: linear-gradient(to right, #616a74 0%, #959da6 100%);
-}
+  background-image: linear-gradient(to right, #ff3400 0%, #ff7b00 100%); }
 
-.button:hover, .button-gray:hover{
+.button-gray:before {
+  background-image: linear-gradient(to right, #616a74 0%, #959da6 100%); }
+
+.button:hover, .button-gray:hover {
   box-shadow: inset 0 0 0 2px transparent;
   color: #fff;
-  background-image: none;
-  }
+  background-image: none; }
 
 .button:hover:before, .button-gray:hover:before {
-    opacity: 1;
-    }
+  opacity: 1; }
 
-.button-solid:hover{
-    transform: translateY(1px);
-    color:#fff;
-    }
+.button-solid:hover {
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+  color: #fff; }
 
 .button-solid:after {
   position: absolute;
@@ -73,22 +66,20 @@ transition: ease-in all .1s;
   background-image: linear-gradient(to right, #ff5400 0%, #ff7b00 100%);
   transition: opacity 0.1s ease-out;
   z-index: 2;
-  opacity: 0;
-}
+  opacity: 0; }
+
 .button-solid:hover:after {
-  opacity: 1;
-}
+  opacity: 1; }
+
 .button-solid span {
   position: relative;
-  z-index: 3;
-}
+  z-index: 3; }
 
 /* Button sizes */
 .sm {
-font-size: .75rem;
-padding: .75rem 1.2rem;d
-}
+  font-size: .75rem;
+  padding: .75rem 1.2rem; }
 
 .lg {
-font-size: 1.3rem;
-padding: 1.1rem 2.5rem .95rem; }
+  font-size: 1.3rem;
+  padding: 1.1rem 2.5rem .95rem; }
