--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,10 +1,10 @@
 .button {
   display: inline-block;
   font-weight: 700;
-  font-family: inherit;
+  line-height: 1.1;
   -webkit-font-smoothing: subpixel-antialiased;
-  padding: 1rem 2rem .955rem;
-  border-radius: 3rem;
+  padding: 1em 2em;
+  border-radius: 3em;
   text-decoration: none;
   position: relative;
   overflow: hidden;
@@ -32,7 +32,7 @@
   height: 100%;
   opacity: 0;
   z-index: -1;
-  transition: .1s ease-in;
+  transition: .1s ease-in all;
 }
 
 .button:before {
@@ -64,11 +64,10 @@
 /* Button sizes */
 
 .sm {
-  font-size: .75rem;
-  padding: .75rem 1.2rem;
+  font-size: .75em;
+  line-height: 1.5;
 }
 
 .lg {
-  font-size: 1.3rem;
-  padding: 1.1rem 2.5rem .95rem;
+  font-size: 1.3em;
 }
