--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -12,7 +12,7 @@
   -webkit-backface-visibility: hidden;
   z-index: 1; }
 
-.button, .button-gray, .button-solid, .button-solido {
+.button, .button-gray, .button-solid {
   display: inline-block;
   font-weight: 700;
   font-family: inherit;
