--- a/styles/dojo-syles.scss
+++ b/styles/dojo-syles.scss
@@ -4,6 +4,36 @@
     transition: all .25s ease-in-out;
     background-image: none;
   }
+
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  figure {
+    margin:0;
+    padding: 0;
+  }
+
+  p {
+    margin:0 0 1rem 0;
+  }
+
+  .text-center {
+    text-align: center;
+  }
+
+  .load-more {
+    margin:2rem 0;
+  }
+
+  ::selection {
+    background: #ff6600; /* WebKit/Blink Browsers */
+  }
+  ::-moz-selection {
+    background: #ff6600; /* Gecko Browsers */
+  }
+
   #teaser {
     background: #ccc;
     padding: 8rem 0 6rem;
@@ -12,4 +42,35 @@
     .card-interviwee {
       padding:0 2rem;
     }
+  }
+.video-summary {
+  font-size: .855rem;
+}
+  #interviews {
+    padding:3rem 0;
+    
+    h4 {
+      font-size: 1.3rem;
+      margin:.5rem 0 0 0;
+      line-height: 1.3;
+    }
+  }
+
+  #featured {
+    background: #212121;
+    color: #999;
+    padding:3rem 0;
+    h2 {
+      color:#ff5400;
+    }
+    h4 {
+      color: White;
+      margin-bottom:0;
+      line-height: 1;
+    }
+    img { border-radius: 6px; }
+  }
+
+  #interviews, #featured {
+    img { border-radius: 6px; }
   }
