--- a/styles/type.css
+++ b/styles/type.css
@@ -13,28 +13,34 @@ body {
 h1, .h1 {
     font-size: 2.22rem;
     line-height: 1.2;
+    font-weight: 700;
 }
 
 h2, .h2 {
     font-size: 1.77rem;
     line-height: 1.3;
+    font-weight: 500;
 }
 
 h3, .h3 {
     font-size: 1.33rem;
     line-height: 1.4;
+    font-weight: 500;
 }
 
 h4, .h4 {
     font-size: 1rem;
+    font-weight: 500;
 }
 
 h5, .h5, small, .small {
     font-size: .88rem;
+    font-weight: 500;
 }
 
 h6, .h6, .tiny {
     font-size: .77rem;
+    font-weight: 500;
 }
 
 .lead {
