--- a/css-readable/main.css
+++ b/css-readable/main.css
@@ -249,6 +249,22 @@ h6,
 .italic {
   font-style: italic;
 }
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-justify {
+  text-align: justify;
+}
 body {
   margin: 0;
 }
@@ -813,6 +829,11 @@ body {
 .pl-2 {
   padding-left: calc(var(--spc) * 2);
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .img-fluid {
   max-width: 100%;
 }
@@ -856,6 +877,10 @@ body {
 
 .ratio-4-3 {
   padding-top: 75%;
+}
+
+.ratio-3-1 {
+  padding-top: 33.33%;
 }
 body {
   color: var(--color-dark);
@@ -1056,18 +1081,57 @@ Notes: Don't place links inside card, as the card itself is a link.
   background: var(--color-dark);
   color: var(--color-light);
 }
-.page:before {
+.page-template-default:not(.home):before,
+.bg-decor-img {
   content: "";
-  width: 60%;
+  width: 80%;
   top: 0;
   right: 0;
-  height: 60vh;
+  height: 100vh;
+  max-height: 800px;
   display: block;
-  background: linear-gradient(136.55deg, rgba(255, 0, 0, 0.66) 21.6%, rgba(255, 84, 0, 0.454334) 55.73%, rgba(255, 84, 0, 0) 98.24%);
   position: fixed;
+  z-index: 0;
+  background: linear-gradient(0deg, white, transparent), linear-gradient(90deg, white, transparent);
+}
+
+.bg-decor-img {
+  background-color: #ff5400;
+  animation: 30s infinite colorChange;
   z-index: -1;
-  right: 0;
+  background-size: cover;
+  background-attachment: fixed;
+  background-blend-mode: multiply;
+}
+
+.bg-decor-img:after {
+  content: "";
+  position: absolute;
   top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ff5400;
+  animation: 30s infinite colorChange;
+  opacity: .6;
+}
+
+@keyframes colorChange {
+  0% {
+    background-color: #ff5400;
+  }
+
+  33% {
+    background-color: #c03;
+  }
+
+  66% {
+    background-color: #ffaa00;
+  }
+
+  100% {
+    background-color: #ff5400;
+  }
 }
 
 .content-box {
