--- a/styles/images.css
+++ b/styles/images.css
@@ -1,3 +1,8 @@
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .img-fluid {
     max-width: 100%;
 }
@@ -41,4 +46,8 @@
 
 .ratio-4-3 {
     padding-top: 75%;
+}
+
+.ratio-3-1 {
+    padding-top: 33.33%;
 }
