--- a/styles/type.css
+++ b/styles/type.css
@@ -67,3 +67,19 @@ h6, .h6, .tiny {
 .italic {
     font-style: italic;
 }
+
+.text-left {
+    text-align: left;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.text-justify {
+    text-align: justify;
+}
