--- a/styles/pages.css
+++ b/styles/pages.css
@@ -1,57 +1,4 @@
-.page-template-default:not(.home):before, .bg-decor-img {
-  content: "";
-  width: 80%;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  max-height: 800px;
-  display: block;
-  position: fixed;
-  z-index: 0;
-  background: linear-gradient(0deg, white, transparent), linear-gradient(90deg, white, transparent);
-}
-
-.bg-decor-img {
-  background-color: #ff5400;
-  animation: 30s infinite colorChange;
-  z-index: -1;
-  background-size: cover;
-  background-attachment: fixed;
-  background-blend-mode: multiply;
-}
-
-.bg-decor-img:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #ff5400;
-  animation: 30s infinite colorChange;
-  opacity: .6;
-}
-
-@keyframes colorChange {
-  0% {
-    background-color: #ff5400;
-  }
-  33% {
-    background-color: #c03;
-  }
-  66% {
-    background-color: #ffaa00;
-  }
-  100% {
-    background-color: #ff5400;
-  }
-}
-
-.content-box {
-  border-top: 4px solid;
-}
-
 .sidebar .card {
   position: sticky;
-  top: var(--spc-double);
+  top: calc(var(--spc-double) * 2);
 }
