--- a/css-readable/main.css
+++ b/css-readable/main.css
@@ -40,7 +40,7 @@ html {
   /**/
   --color-light: #fff;
   /* SPACING */
-  --max-content-width: 1440px;
+  --max-content-width: 1280px;
   --max-text-width: 42rem;
   --spc: 1rem;
   --spc-double: calc(var(--spc) * 2);
@@ -50,6 +50,7 @@ html {
   --shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
   --shadow-medium: 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1);
   --shadow-big: 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1), 0 32px 32px rgba(0, 0, 0, 0.1);
+  --radius: var(--spc-quarter);
 }
 /*
 
@@ -172,6 +173,14 @@ BOX SHADOWS --------------------------------------------------
   border-top-right-radius: var(--spc-quarter);
   border-bottom-right-radius: var(--spc-quarter);
 }
+
+#wpadminbar {
+  opacity: 0 !important;
+}
+
+#wpadminbar:hover {
+  opacity: 1 !important;
+}
 html {
   font-size: 18px;
 }
@@ -180,14 +189,28 @@ body {
   font-family: "Rubik", sans-serif;
   font-size: 1rem;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
+h1,
+h2,
+h3,
+h4,
+.h1,
+.h2,
+.h3,
+.h4 {
+  color: var(--color-dark);
 }
 
 h1,
 .h1 {
-  font-size: 2.22rem;
+  font-size: 2.9rem;
   line-height: 1.2;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 h2,
@@ -201,7 +224,7 @@ h3,
 .h3 {
   font-size: 1.33rem;
   line-height: 1.4;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 h4,
@@ -211,9 +234,7 @@ h4,
 }
 
 h5,
-.h5,
-small,
-.small {
+.h5 {
   font-size: .88rem;
   font-weight: 500;
 }
@@ -223,6 +244,11 @@ h6,
 .tiny {
   font-size: .77rem;
   font-weight: 500;
+}
+
+small,
+.small {
+  font-size: .88rem;
 }
 
 .lead {
@@ -345,23 +371,23 @@ body {
 }
 
 .sm-span-1 {
-  grid-column: span 1;
+  grid-column-end: span 1;
 }
 
 .sm-span-2 {
-  grid-column: span 2;
+  grid-column-end: span 2;
 }
 
 .sm-span-3 {
-  grid-column: span 3;
+  grid-column-end: span 3;
 }
 
 .sm-span-4 {
-  grid-column: span 4;
+  grid-column-end: span 4;
 }
 
 .sm-span-5 {
-  grid-column: span 5;
+  grid-column-end: span 5;
 }
 
 .sm-hide {
@@ -382,23 +408,23 @@ body {
 
 @media all and (max-width: 767px) {
   .sm-moveto-2 {
-    grid-column: 2;
+    grid-column-start: 2;
   }
 
   .sm-moveto-3 {
-    grid-column: 3;
+    grid-column-start: 3;
   }
 
   .sm-moveto-4 {
-    grid-column: 4;
+    grid-column-start: 4;
   }
 
   .sm-moveto-5 {
-    grid-column: 5;
+    grid-column-start: 5;
   }
 
   .sm-moveto-6 {
-    grid-column: 6;
+    grid-column-start: 6;
   }
 }
 
@@ -426,23 +452,23 @@ body {
   }
 
   .md-span-1 {
-    grid-column: span 1;
+    grid-column-end: span 1;
   }
 
   .md-span-2 {
-    grid-column: span 2;
+    grid-column-end: span 2;
   }
 
   .md-span-3 {
-    grid-column: span 3;
+    grid-column-end: span 3;
   }
 
   .md-span-4 {
-    grid-column: span 4;
+    grid-column-end: span 4;
   }
 
   .md-span-5 {
-    grid-column: span 5;
+    grid-column-end: span 5;
   }
 
   .md-hide {
@@ -464,23 +490,23 @@ body {
 
 @media all and (min-width: 768px) and (max-width: 979px) {
   .md-moveto-2 {
-    grid-column: 2;
+    grid-column-start: 2;
   }
 
   .md-moveto-3 {
-    grid-column: 3;
+    grid-column-start: 3;
   }
 
   .md-moveto-4 {
-    grid-column: 4;
+    grid-column-start: 4;
   }
 
   .md-moveto-5 {
-    grid-column: 5;
+    grid-column-start: 5;
   }
 
   .md-moveto-6 {
-    grid-column: 6;
+    grid-column-start: 6;
   }
 }
 
@@ -508,23 +534,23 @@ body {
   }
 
   .lg-span-1 {
-    grid-column: span 1;
+    grid-column-end: span 1;
   }
 
   .lg-span-2 {
-    grid-column: span 2;
+    grid-column-end: span 2;
   }
 
   .lg-span-3 {
-    grid-column: span 3;
+    grid-column-end: span 3;
   }
 
   .lg-span-4 {
-    grid-column: span 4;
+    grid-column-end: span 4;
   }
 
   .lg-span-5 {
-    grid-column: span 5;
+    grid-column-end: span 5;
   }
 
   .lg-hide {
@@ -546,23 +572,23 @@ body {
 
 @media all and (min-width: 980px) and (max-width: 1439px) {
   .lg-moveto-2 {
-    grid-column: 2;
+    grid-column-start: 2;
   }
 
   .lg-moveto-3 {
-    grid-column: 3;
+    grid-column-start: 3;
   }
 
   .lg-moveto-4 {
-    grid-column: 4;
+    grid-column-start: 4;
   }
 
   .lg-moveto-5 {
-    grid-column: 5;
+    grid-column-start: 5;
   }
 
   .lg-moveto-6 {
-    grid-column: 6;
+    grid-column-start: 6;
   }
 }
 
@@ -590,23 +616,23 @@ body {
   }
 
   .xl-span-1 {
-    grid-column: span 1;
+    grid-column-end: span 1;
   }
 
   .xl-span-2 {
-    grid-column: span 2;
+    grid-column-end: span 2;
   }
 
   .xl-span-3 {
-    grid-column: span 3;
+    grid-column-end: span 3;
   }
 
   .xl-span-4 {
-    grid-column: span 4;
+    grid-column-end: span 4;
   }
 
   .xl-span-5 {
-    grid-column: span 5;
+    grid-column-end: span 5;
   }
 
   .xl-hide {
@@ -626,23 +652,23 @@ body {
   }
 
   .xl-moveto-2 {
-    grid-column: 2;
+    grid-column-start: 2;
   }
 
   .xl-moveto-3 {
-    grid-column: 3;
+    grid-column-start: 3;
   }
 
   .xl-moveto-4 {
-    grid-column: 4;
+    grid-column-start: 4;
   }
 
   .xl-moveto-5 {
-    grid-column: 5;
+    grid-column-start: 5;
   }
 
   .xl-moveto-6 {
-    grid-column: 6;
+    grid-column-start: 6;
   }
 }
 
@@ -1081,7 +1107,24 @@ Notes: Don't place links inside card, as the card itself is a link.
   background: var(--color-dark);
   color: var(--color-light);
 }
-.sidebar .card {
+.sidebar {
   position: sticky;
-  top: calc(var(--spc-double) * 2);
+  top: var(--spc);
+}
+
+.sidebar .card {
+  width: 100%;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media all and (max-width: 980px) {
+  .sidebar {
+    box-sizing: border-box;
+    background: var(--color-light-gray);
+    padding: var(--spc-double);
+    width: 100vw;
+    margin-left: calc(-1 * var(--spc));
+  }
 }
