--- a/styles/type.css
+++ b/styles/type.css
@@ -7,13 +7,20 @@ body {
     font-family: "Rubik", sans-serif;
     font-size: 1rem;
     line-height: 1.5;
-    font-weight: 400;
+    font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+}
+
+h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
+    color: var(--color-dark);
 }
 
 h1, .h1 {
-    font-size: 2.22rem;
+    font-size: 2.9rem;
     line-height: 1.2;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 h2, .h2 {
@@ -25,7 +32,7 @@ h2, .h2 {
 h3, .h3 {
     font-size: 1.33rem;
     line-height: 1.4;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 h4, .h4 {
@@ -33,7 +40,7 @@ h4, .h4 {
     font-weight: 500;
 }
 
-h5, .h5, small, .small {
+h5, .h5 {
     font-size: .88rem;
     font-weight: 500;
 }
@@ -41,6 +48,10 @@ h5, .h5, small, .small {
 h6, .h6, .tiny {
     font-size: .77rem;
     font-weight: 500;
+}
+
+small, .small {
+    font-size: .88rem;
 }
 
 .lead {
