--- a/styles/variables.css
+++ b/styles/variables.css
@@ -39,7 +39,7 @@ html {
     /**/
     --color-light: #fff;
     /* SPACING */
-    --max-content-width: 1440px;
+    --max-content-width: 1280px;
     --max-text-width: 42rem;
     --spc: 1rem;
     --spc-double: calc(var(--spc) * 2);
@@ -49,4 +49,5 @@ html {
     --shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
     --shadow-medium: 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1);
     --shadow-big: 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1), 0 32px 32px rgba(0, 0, 0, 0.1);
+    --radius: var(--spc-quarter);
 }
