--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,3 +1,5 @@
+/* Buttons Options */
+
 .button {
   border: none;
   font-size: 1rem;
@@ -13,18 +15,12 @@
   color: #ff3700;
   box-shadow: 0 0 0 2px #ff3700 inset;
   background: 0 0;
-  transition: all 0.25s;
+  /* transition: all 0.25s; */
   text-align: center !important;
-
   position: relative;
   overflow: hidden;
-  transition: ease-in opacity .3s, ease-in padding .2s, ease-in color .1s;
-}
-
-.button:hover {
-  color: #fff;
-  /* background-image: linear-gradient(-156deg, #ff7e15 0, #FF3700 100%); */
-  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, .27), inset 0 0 0 2px transparent;
+  /* transition: ease opacity .2s, ease padding .2s, ease color .1s; */
+  transition: ease all .3s;
 }
 
 .button:before{
@@ -38,11 +34,7 @@
   background-size: 101% 101%;
   opacity: 0;
   z-index: -1;
-  transition: .2s ease-in opacity;
-}
-
-.button:hover:before{
-  opacity: 1; 
+  transition: ease-in opacity .2s, ease-in box-shadow .5s, ease-in color .2s;
 }
 
 .button--discrete {
@@ -50,14 +42,16 @@
   box-shadow: 0 0 0 2px #616a74 inset;
   background: 0 0;
   /* transition: .1s ease-in color; */
-  transition: .2s ease-in background;
+  /* transition: ease-in background .2s; */
+  transition: all .3s;
 }
 
-.button--discrete:hover:before {
+.button--discrete:before {
   color: #fff;
   background-image: linear-gradient(156deg, #959da6 0, #616a74 100%);
   box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, .27);
   background-size: 105% 105%;
+  transition: all .3s;
 }
 
 .button--primary {
@@ -72,6 +66,9 @@
   box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, .27), inset -6px -6px 12px 0 #ff3700;
 }
 
+
+/* Button Sizes */
+
 a.button--size_sm {
   font-size: .75rem;
   padding: .75rem 1.2rem;
@@ -82,27 +79,62 @@ a.button--size_lg {
   padding: 1.1rem 2.5rem .95rem;
 }
 
+
+/* Button Animations & Transitions */
+
+.button:hover {
+  color: #fff;  
+  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, .27), inset 0 0 0 2px transparent;
+  transition: ease-in opacity .2s, ease-in box-shadow .5s, ease-in color .4s;
+  /* transition: ease all .3s; */
+}
+
+.button:hover:before{
+  opacity: 1;
+  transition: ease-in opacity .2s;
+}
+
+
+/* Arrow Buttons */
+
 a.arrow-button:after {
   content: '';
   background: url(https://s3-us-west-1.amazonaws.com/nearsoft-com-media/uploads/2019/02/white-arrow.svg);
   width: 26px;
   height: 17px;
-  /* padding-right: 40px; */
   background-repeat: no-repeat;
   right: -5px;
   position: absolute;
   opacity: 0;
-  transition: ease-in all .2s;
+  transition: ease all .3s;
+  top: 18px;
+}
+
+a.button--size_lg.arrow-button:after {
+  top: 27px;
+}
+
+a.button--size_sm.arrow-button:after {
   top: 14px;
 }
 
 a.arrow-button:hover {
-  padding-right: 50px;
-  transition: ease-in all .2s;
+  padding-right: 60px;
+  transition: ease all .3s;
 }
 
 a.arrow-button:hover:after {
   right: 15px;
   opacity: 1;
-  transition: ease-in all .2s;
+  transition: ease all .3s;
+}
+
+a.button--size_sm.arrow-button:hover {
+  font-size: .75rem;
+  padding-right: 50px;
+}
+
+a.button--size_lg.arrow-button:hover {
+  font-size: 1.3rem;
+  padding-right: 60px;
 }
