--- a/styles/layout.css
+++ b/styles/layout.css
@@ -129,6 +129,9 @@ body {
     .sm-moveto-6 {
         grid-column-start: 6;
     }
+    .sm-hide {
+        display: none;
+    }
 }
 
 /* MEDIUM SCREENS */
@@ -193,6 +196,9 @@ body {
     }
     .md-moveto-6 {
         grid-column-start: 6;
+    }
+    .md-hide {
+        display: none;
     }
 }
 
@@ -259,6 +265,9 @@ body {
     .lg-moveto-6 {
         grid-column-start: 6;
     }
+    .lg-hide {
+        display: none;
+    }
 }
 
 /* XL SCREENS */
@@ -294,12 +303,6 @@ body {
     .xl-span-5 {
         grid-column-end: span 5;
     }
-    .xl-hide {
-        display: none;
-    }
-    .xl-show {
-        display: block;
-    }
     .xl-show-flex {
         display: flex;
     }
@@ -320,6 +323,9 @@ body {
     }
     .xl-moveto-6 {
         grid-column-start: 6;
+    }
+    .xl-hide {
+        display: none;
     }
 }
 
